# Capacity_Constrained_IM

./: .gitignore  README.md
exp/: CMakeLists.txt
exp/data/: CA-HepPh.txt  Japanese_macaques.txt  Wiki-Vote.txt  blog-catalog.ap  blog-catalog1.ap  dnc-corecipient.ap  dnc-corecipient.txt  facebook.txt  hamster.txt  metabolic.txt  physic.ap  physic.txt  physicians.txt  scinet.ap  scinet.txt  soc-pokec.ap  wikipedia.txt
exp/include/: IMM.h  IMs.h  OPIM.h  OPIM_new.h  OPIM_old.h  argparse.h  graph.h  graphs.h  matroid.h  models.h  preliminaries.h  simulation.h  top.h
exp/output/: history.txt  log.txt  log0.txt  result.out  result_.out  result_0.out  result__.out  result_jornal_1e7_maxcover.out  result_jornal_1e7_maxcover_2.out  result_prob_1e6_1e7.out  result_prob_1e7_maxcover.out  result_prob_1e7_maxcover_2.out
exp/output_rrset/: 1-blogC-ap.out  1-blogC-k.out  1-blogC-rr.out  1-liveJ-ap.out  1-liveJ-k.out  1-liveJ-rr.out  DBLP_ap.out  DBLP_k.out
exp/src/: exp_batch.cpp  exp_gamma.cpp  exp_query_set.cpp  large.cpp  main.cpp  small.cpp  swap_clock.c  test.cpp  test2.cpp  test3.cpp  test_eps.cpp  test_opim.cpp
